add README file

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,13 @@
-DB_HOST='localhost'
+#For Lockal run DB if not work
+# DB_HOST='localhost'
+# DB_PORT=5432
+# DB_USERNAME='postgres'
+# DB_PASSWORD='123456'
+# DB_NAME='postgres'
+
+
+DB_HOST='ep-autumn-thunder-a2hgvkc8-pooler.eu-central-1.aws.neon.tech'
 DB_PORT=5432
-DB_USERNAME='postgres'
-DB_PASSWORD='123456'
-DB_NAME='postgres'
+DB_USERNAME='default'
+DB_PASSWORD='XSGpiTbM6D5K'
+DB_NAME='verceldb'
