--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,7 @@
 # DB_NAME='postgres'
 
 
+CLIENT_API='http://localhost:5173'
 DB_HOST='ep-autumn-thunder-a2hgvkc8-pooler.eu-central-1.aws.neon.tech'
 DB_PORT=5432
 DB_USERNAME='default'
